tests/fail/parse/unclosed-block-comment.fathom
//~ exit-code = 1

{}
/* a
/* b
/* c

*/ c
*/ b
// a
